# doorcam

./: CMakeLists.txt  README.txt  client.cpp  doorcam.service  findUSB.service  makefile  startup.service
client/: CMakeLists.txt
inc/: SocketException.h  server.h  socket.h
network/: CMakeLists.txt
server/: CMakeLists.txt  doorcam_config.json
src/: Camera.cpp  Config.cpp  Console.cpp  client.cpp  client.h  main.cpp  main_client.cpp  main_network.cpp  main_server.cpp  pyfunc.cpp  server.cpp  socket.cpp
src/inc/: Camera.h  Config.h  Console.h  Smoother.h  SocketException.h  client.h  pyfunc.h  server.h  socket.h  timestamp.h
src/python/: doorcam_getconfig.py  doorcam_getwifi.py  doorcam_init.py  doorcam_test_2.py  fileTools.py  getconfig.py
